crates/zynk-macros/tests/expand/static_result_return.stderr
error: #[zynk::static_file] functions must return StaticFile
 --> tests/expand/static_result_return.rs:6:23
  |
6 | fn avatar(id: i64) -> Result<StaticFile, String> {
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^
